--- a/ui/vspread_model_v1.ui
+++ b/ui/vspread_model_v1.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>820</width>
-    <height>621</height>
+    <width>1200</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>820</width>
-    <height>620</height>
+    <width>1200</width>
+    <height>900</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
        </font>
       </property>
       <property name="title">
-       <string>Step 1: Model initialization</string>
+       <string>Step 1: Model initialization : Parameters cannot be changed unless a new simulation is created</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_8">
        <item>
@@ -57,7 +57,7 @@
             </font>
            </property>
            <property name="text">
-            <string> https://opendata.digilugu.ee/opendata_covid19_test_results.csv</string>
+            <string>https://opendata.digilugu.ee/opendata_covid19_test_results.csv</string>
            </property>
           </widget>
          </item>
@@ -70,7 +70,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Fetch data and initialize model</string>
+            <string>Create new simulation</string>
            </property>
           </widget>
          </item>
@@ -91,7 +91,7 @@
         </widget>
        </item>
        <item>
-        <layout class="QGridLayout" name="gridLayout">
+        <layout class="QGridLayout" name="gridLayout" rowminimumheight="25,25,25">
          <item row="1" column="0">
           <widget class="QLabel" name="label_3">
            <property name="font">
@@ -181,36 +181,6 @@
          </item>
         </layout>
        </item>
-       <item>
-        <widget class="Line" name="line">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label_20">
-         <property name="font">
-          <font>
-           <weight>50</weight>
-           <bold>false</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string>Initial active cases curve</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <property name="sizeConstraint">
-          <enum>QLayout::SetDefaultConstraint</enum>
-         </property>
-         <item>
-          <layout class="QVBoxLayout" name="figThinFigure"/>
-         </item>
-        </layout>
-       </item>
       </layout>
      </widget>
     </item>
@@ -223,7 +193,7 @@
        </font>
       </property>
       <property name="title">
-       <string>Step 2: Simulation</string>
+       <string>Step 2: Run simulation : Change the below parameters to analyze different outcomes</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
@@ -641,7 +611,7 @@
        </font>
       </property>
       <property name="title">
-       <string>Configuration file</string>
+       <string>Simulation configuration file</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
@@ -694,7 +664,7 @@
             <bool>false</bool>
            </property>
            <property name="text">
-            <string>Save all configuration</string>
+            <string>Save all config</string>
            </property>
           </widget>
          </item>
@@ -735,8 +705,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>820</width>
-     <height>21</height>
+     <width>1200</width>
+     <height>31</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -744,9 +714,27 @@
      <string>File</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionDisplayActiveCaseGraph"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionDisplayActiveCaseGraph">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Display total active cases at init</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
