--- a/ui/vspread_model_v1.ui
+++ b/ui/vspread_model_v1.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>920</width>
-    <height>800</height>
+    <width>1200</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>900</width>
-    <height>800</height>
+    <width>1200</width>
+    <height>900</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -133,7 +133,7 @@
             </font>
            </property>
            <property name="text">
-            <string>0.8</string>
+            <string>0.2</string>
            </property>
           </widget>
          </item>
@@ -175,7 +175,7 @@
             </font>
            </property>
            <property name="text">
-            <string>0.1</string>
+            <string>0.9</string>
            </property>
           </widget>
          </item>
@@ -301,7 +301,7 @@
               </font>
              </property>
              <property name="text">
-              <string>R0 for regions</string>
+              <string>R0 for areas</string>
              </property>
             </widget>
            </item>
@@ -340,7 +340,7 @@
               </font>
              </property>
              <property name="text">
-              <string>0.9</string>
+              <string>1.0</string>
              </property>
             </widget>
            </item>
@@ -575,7 +575,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit_2">
+          <widget class="QLineEdit" name="txtMcCount">
            <property name="font">
             <font>
              <weight>50</weight>
@@ -738,6 +738,12 @@
            <bold>false</bold>
           </font>
          </property>
+         <property name="undoRedoEnabled">
+          <bool>false</bool>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
@@ -769,8 +775,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>920</width>
-     <height>21</height>
+     <width>1200</width>
+     <height>31</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -785,6 +791,7 @@
      <string>View</string>
     </property>
     <addaction name="actionDisplayActiveCaseGraph"/>
+    <addaction name="actionClear_log"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
@@ -809,6 +816,11 @@
   <action name="actionSave_config_file_as">
    <property name="text">
     <string>Save config file as...</string>
+   </property>
+  </action>
+  <action name="actionClear_log">
+   <property name="text">
+    <string>Clear log</string>
    </property>
   </action>
  </widget>
